ExploreWithMe.main-svc: доработки для github